k8s/system/manifests/longhorn/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    shared-gateway-access: 'true'
