k8s/system/manifests/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - longhorn.furonverse.com
  rules:
    - backendRefs:
        - kind: Service
          name: longhorn-frontend
          port: 80
